@@ -24,7 +24,7 @@
 
 #include <UnitTest++.h>
 #include <ode/ode.h>
-#include "ode/odemath.h"
+#include <ode/odemath.h>
 
 
 
